kasten/k10-validate-ns-by-preset-label/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: k10-validate-ns-by-preset-label-test
policies:
- ../k10-validate-ns-by-preset-label.yaml
resources:
- test-resource.yaml
results:
- kind: Namespace
  policy: k10-validate-ns-by-preset-label
  resources:
  - namespace-invalid
  result: fail
  rule: k10-validate-ns-by-preset-label
- kind: Namespace
  policy: k10-validate-ns-by-preset-label
  resources:
  - namespace-gold
  - namespace-silver
  - namespace-bronze
  - namespace-none
  result: pass
  rule: k10-validate-ns-by-preset-label
